Minimise extra whitespace in result item layout. Add tags and remove extra ui elements.  (+8 squashed commits) Squashed commits: [f11e5b6] Remove quotes and brackets from time period display. [e057f20] Comment out search dropdown caret as not using advanced search anymore... [7e38f7b] Add source and publisher to meta tags on result list. [3c2267a] Still fixing the floated elements line spacing. [45ff2df] Getting finicky... [96fbfce] Silly rabbit, css tricks are for kids. [c7672c1] More css tricks to conserve space on result items. [063cec5] Tricks to save space for search hitlist.

--- a/app/assets/stylesheets/modules/home.css.scss
+++ b/app/assets/stylesheets/modules/home.css.scss
@@ -168,10 +168,34 @@ $disabled-color: #aaa;
 
 .result-title {
   margin-top: 0px;
+  font-size:20px;
+
+  &:first-line{
+//    font-weight: bold;
+    font-size: 24px;
+  }
 }
 
 .result-author {
   font-weight: bold;
+
+  // make them on the same line if possible
+  float:left;
+
+  // minimise gap and use line height instead.
+  margin: 0.1em 0;
+}
+
+.result-citation {
+  float:right;
+  margin: 0.1em 0;
+
+}
+
+.description-text {
+  clear:both;
+  text-align: justify;
+  padding-top: 0.5em;
 }
 
 // TODO : Limit max height of this when too many tags
